🐛fixed z-index bug in study filtered list

--- a/app/components/Navbar.module.css
+++ b/app/components/Navbar.module.css
@@ -1,5 +1,6 @@
 .nav {
 	position: fixed;
+	z-index: 1000;
 	margin: 0;
 	max-width: 810px;
 	width: 100%;
